# celestial-turtle-hunt

./: CMakeLists.txt  README.md  package.xml
celestial_turtle_controller/: CMakeLists.txt  package.xml
celestial_turtle_controller/include/celestial_turtle_controller/: celestial_controller.hpp  turtle_controller.hpp
celestial_turtle_controller/src/: celestial_controller.cpp  turtle_controller.cpp
celestial_turtle_hunter/: CMakeLists.txt  package.xml
celestial_turtle_hunter/include/celestial_turtle_hunter/: turtle_hunter.hpp
celestial_turtle_hunter/launch/: turtle_hunter.launch.xml
celestial_turtle_hunter/src/: turtle_hunter.cpp  turtle_hunter_node.cpp
celestial_turtle_interface/: CMakeLists.txt  package.xml
celestial_turtle_lib/: CMakeLists.txt  package.xml
celestial_turtle_lib/include/celestial_turtle_lib/: utils.hpp
celestial_turtle_lib/src/: utils.cpp
celestial_turtle_spawner/: CMakeLists.txt  package.xml
celestial_turtle_spawner/include/celestial_turtle_spawner/: turtle_mover.hpp  turtle_spawner.hpp  utils.hpp
celestial_turtle_spawner/launch/: turtle_spawner.launch.xml
celestial_turtle_spawner/src/: turtle_mover.cpp  turtle_spawner.cpp  utils.cpp
celestial_turtle_teleop/: CMakeLists.txt  package.xml
celestial_turtle_teleop/include/celestial_turtle_teleop/: turtle_teleop.hpp
celestial_turtle_teleop/src/: turtle_teleop.cpp
include/turtle_guardian/: turtle_guardian.hpp
launch/: turtle_guardian.launch.xml
src/: turtle_guardian.cpp  turtle_guardian_navigator.cpp  turtle_guardian_node.cpp
turtle_guardian/: CMakeLists.txt  package.xml
turtle_guardian/include/turtle_guardian/: turtle_guardian.hpp  turtle_guardian_navigator.hpp
turtle_guardian/launch/: turtle_guardian.launch.xml  turtle_navigator.launch.xml
turtle_guardian/src/: turtle_guardian.cpp  turtle_guardian_navigator.cpp
